--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="conteiner-left">
     <h1>Easy Shopping 
         Via Mobile</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium saepe facere architecto eius magni obcaecati mollitia praesentium. Accusantium facilis vitae expedita dolor, inventore laborum dignissimos iste veniam fuga vero exercitationem?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     <button>Get Started</button>
     </section>
     <section class="conteiner-right">
