Alteração do paragrafo do projeto

--- a/alteração do tema do index.html
+++ b/alteração do tema do index.html
@@ -18,7 +18,7 @@
     <section class="conteiner-left">
     <h1>Easy Shopping 
         Via Mobile</h1>
-    <p>Lorem ipsum dolor sit amet 22 34 devclub uhuuuu consectetur adipisicing elit.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, amet magni ut neque tempore soluta quisquam at consequuntur voluptas omnis nobis possimus vitae delectus adipisci odio quas eligendi aperiam odit!</p>
     <button>Get Started</button>
     </section>
     <section class="conteiner-right">
